# enderslicercura

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  gradlew  gradlew.bat  settings.gradle.kts
.agent-patch/: final-workflow.b64  part00.b64  part01.b64  part02.b64  part02a.b64  part02b.b64  part02c.b64  part02d.b64
.github/: CI_TRIGGER.md
.github/workflows/: agent-fix.yml  build.yml  curaengine-android.yml  rename-package.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/gcode/: end.gcode  start.gcode
app/src/main/assets/printers/: modified_ender3_v2.json
app/src/main/bumpmesh/: android-bridge.js
app/src/main/cpp/: CMakeLists.txt  native_bridge.cpp
app/src/main/java/com/tomppi/enderslicer/: MainActivity.kt
app/src/main/java/com/tomppi/enderslicer/calibration/: CalibrationTowerGenerator.kt
app/src/main/java/com/tomppi/enderslicer/data/: AppStateStore.kt  PrinterDefinitionLoader.kt
app/src/main/java/com/tomppi/enderslicer/engine/: CuraEngineCommand.kt  CuraEngineRunner.kt  GcodeLayerEventProcessor.kt  GcodeLayerPreview.kt  (+2 more)
app/src/main/res/drawable/: esc_icon_foreground.xml
app/src/main/res/mipmap-anydpi/: ic_launcher.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: icon_colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths.xml
docs/: CURAENGINE_ANDROID.md
native/curaengine/profiles/: android-arm64
scripts/: build-curaengine-android.sh  fetch-cura-resources.sh  fetch-curaengine.sh
(+67 files in other folders)
